page home pratiquement fini pour la traduction manque gestion erreur, fonction pour refresh le chat et liste des tournois

--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -1,7 +1,19 @@
 {
   "chat_global": "CHAT://global",
+  "chat_friends":"CHAT://friends",
   "switch_to_friends": "Switch to friends chat",
+  "switch_to_global": "Switch to global chat",
+  "no_friends":"You don't have friends :(",
+  "invitation_to_pong":"Invitation sent to",
   "enter_chat": "Send a message",
+  "chat": "CHAT",
+  "pong_game_accepted_you": "has accepted your invitation for a private pong game",
+  "pong_game_accepted_other": "You have accepted a private pong game",
+  "pong_request_message": "wants to play with you !",
+  "accept_button": "Accept",
+  "decline_button": "Decline",
+  "request_declined_message": "Request declined :(",
+  "friend_request_message": "wants to be friend with you !",
   "search_users": "Search users...",
   "french": "French",
   "english": "English",
@@ -19,5 +31,19 @@
   "public": "Public",
   "private": "Private",
   "tournament_password": "Tournament Password",
-  "join_tournament": "JOIN TOURNAMENT"
+  "join_tournament": "JOIN TOURNAMENT",
+  "game_mode_local_description": "Play against a friend on the same keyboard.",
+  "game_mode_multi_description": "Compete against other players online.",
+  "game_mode_ai_description": "Test your skills against the computer.",
+  "game_mode_local": "LOCAL",
+  "game_mode_multi": "ONLINE",
+  "game_mode_ai": "AI",
+  "no_tournaments_available": "There are no tournaments available at the moment!",
+  "players_label": "Players",
+  "enter_password_placeholder": "Enter Password",
+  "join_button": "JOIN",
+  "choose_tournament_alias_title": "Choose Tournament Alias",
+  "enter_your_alias_placeholder": "Enter your alias...",
+  "cancel_button": "Cancel",
+  "confirm_join_button": "Join"
 }
