--- a/frontend/public/locales/fr.json
+++ b/frontend/public/locales/fr.json
@@ -1,8 +1,20 @@
 {
-  "chat_global": "TCHAT://public",
+  "chat_global": "TCHAT://général",
+  "chat_friends":"TCHAT://amis",
   "switch_to_friends": "Passer au chat entre amis",
+  "switch_to_global": "Passer au chat général",
+  "no_friends":"Vous avez pas d'amis :(",
+  "invitation_to_pong":"Invitation envoyée à",
   "enter_chat": "envoyer un message",
-  "search_users": "rechercher un utilisateur",
+  "chat": "TCHAT",
+  "pong_game_accepted_you": "a accepté votre invitation pour une partie privée de pong",
+  "pong_game_accepted_other": "Vous avez accepté une partie privée de pong",
+  "pong_request_message": "veut jouer avec vous !",
+  "accept_button": "Accepter",
+  "decline_button": "Refuser",
+  "request_declined_message": "Requête refusée :(",
+  "friend_request_message": "veut être votre ami !",
+  "search_users": "rechercher un utilisateur..",
   "french": "Français",
   "english": "Anglais",
   "spanish": "Espagnol",
@@ -19,5 +31,19 @@
   "public": "Public",
   "private": "privée",
   "tournament_password": "Mot de passe du tournoi",
-  "join_tournament": "REJOIGNEZ LE TOURNOI"
+  "join_tournament": "REJOINDRE UN TOURNOI",
+  "game_mode_local_description": "Jouez contre un ami sur le même clavier.",
+  "game_mode_multi_description": "Affrontez d'autres joueurs en ligne.",
+  "game_mode_ai_description": "Testez vos compétences contre l'ordinateur.",
+  "game_mode_local": "LOCAL",
+  "game_mode_multi": "EN LIGNE",
+  "game_mode_ai": "IA",
+  "no_tournaments_available": "Aucun tournoi n'est disponible pour le moment !",
+  "players_label": "Joueurs",
+  "enter_password_placeholder": "*******",
+  "join_button": "REJOINDRE",
+  "choose_tournament_alias_title": "Choisir un pseudo pour le tournoi",
+  "enter_your_alias_placeholder": "Entrez votre pseudo...",
+  "cancel_button": "Annuler",
+  "confirm_join_button": "Rejoindre"
 }
