--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -1,4 +1,30 @@
 {
+  "signup_title": "Sign Up to ft_transcendence",
+  "username_placeholder": "Pseudo_42",
+  "username_error": "Username must be 3-14 characters long and contain only letters, numbers, underscore or hyphen",
+  "email_placeholder": "your.email@example.com",
+  "email_error": "The email address entered is not valid. Please ensure it follows a standard format (user@domain.com).",
+  "password_title": "Password must contain at least 6 characters, including uppercase, lowercase and number",
+  "password_error": "Your password must be at least 6 characters long and include at least one lowercase letter, one uppercase letter, and one number",
+  "confirm_password_label": "Confirm Password",
+  "signup_button": "Sign Up",
+  "already_have_account": "Already have an account ?",
+
+ "signin_title": "Sign In to ft_transcendence",
+  "username_label": "Username",
+  "or_email_link": "or Email",
+  "email_label": "Email",
+  "or_username_link": "or Username",
+  "password_label": "Password",
+  "signin_button": "Sign In",
+  "signup_link": "Sign Up",
+
+  "a2f_title": "Two-factor authentication",
+  "code_label": "Code",
+  "code_placeholder": "enter code here",
+  "send_code_button": "Send me the code !",
+  "connect_button": "Connexion",
+
   "chat_global": "CHAT://global",
   "chat_friends":"CHAT://friends",
   "switch_to_friends": "Switch to friends chat",
