nornalmente la traduction fonctionnar

--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -70,5 +70,26 @@
   "choose_tournament_alias_title": "Choose Tournament Alias",
   "enter_your_alias_placeholder": "Enter your alias...",
   "cancel_button": "Cancel",
-  "confirm_join_button": "Join"
+  "confirm_join_button": "Join",
+  "home": "Home",
+  "Stats": "Statistics",
+  "new_password": "New password",
+  "current_pass": "Curent password",
+  "save": "Save",
+  "unsave": "Unsave",
+  "overall": "Overall",
+  "history_trad": "History",
+  "tournament_trad": "Tournaments",
+  "Edit_trad": "EDIT PROFILE",
+  "username_trad": "EDIT USERNAME",
+  "mail_trad": "EDIT EMAIL",
+  "change_pic_trad": "Change picture",
+  "edit_picture_trad": "EDIT PROFILE PICTURE",
+  "Edit_pass_trad": "EDIT PASSWORD",
+  "add_friend_trad": "Add friend",
+  "block_friend_trad": "Block player",
+  "tournament_played": "TOURNAMENTS PLAYED",
+  "best_rank": "BEST RANKING",
+  "tournament_l": "Tournament loses",
+  "tournament_w": "Tournaments wins"
 }
