--- a/frontend/public/locales/es.json
+++ b/frontend/public/locales/es.json
@@ -70,5 +70,26 @@
   "choose_tournament_alias_title": "Elige un alias para el torneo",
   "enter_your_alias_placeholder": "Introduce tu alias...",
   "cancel_button": "Cancelar",
-  "confirm_join_button": "Unirse"
+  "confirm_join_button": "Unirse",
+  "home": "recepción",
+  "Stats": "Estadísticas",
+  "new_password": "Nueva contraseña",
+  "current_pass": " Contraseña actual",
+  "save": "Salvaguardar",
+  "unsave": "Cancelar",
+  "overall": "General",
+  "history_trad": "Historial",
+  "tournament_trad": "Torneos",
+  "Edit_trad": "EDITAR PERFIL",
+  "username_trad": "EDITAR NOMBRE DE USUARIO",
+  "mail_trad": "EDITAR CORREO ELECTRÓNICO",
+  "change_pic_trad": "Cambiar imagen",
+  "edit_picture_trad": "EDITAR FOTO DE PERFIL",
+  "Edit_pass_trad": "EDITAR CONTRASEÑA",
+  "add_friend_trad": "Agregar amigo",
+  "block_friend_trad": "Bloquear jugador",
+  "tournament_played": "TORNEOS JUGADOS",
+  "best_rank": "MEJOR CLASIFICACIÓN",
+  "tournament_l": "Derrotas en torneos",
+  "tournament_w": "Victorias en torneos"
 }
