--- a/frontend/public/locales/fr.json
+++ b/frontend/public/locales/fr.json
@@ -70,5 +70,26 @@
   "choose_tournament_alias_title": "Choisir un pseudo pour le tournoi",
   "enter_your_alias_placeholder": "Entrez votre pseudo...",
   "cancel_button": "Annuler",
-  "confirm_join_button": "Rejoindre"
+  "confirm_join_button": "Rejoindre",
+  "home": "Acceuil",
+  "Stats": "Statistiques",
+  "new_password": "Nouveau mot de passe",
+  "current_pass": "Mot de passe actuel",
+  "save": "Sauvegarder",
+  "unsave": "Annuler",
+  "overall": "Général",
+  "history_trad": "Historique",
+  "tournament_trad": "Tournois",
+  "Edit_trad": "MODIFIER LE PROFIL",
+  "username_trad": "MODIFIER LE NOM D'UTILISATEUR",
+  "mail_trad": "MODIFIER L'ADRESSE E-MAIL",
+  "change_pic_trad": "Changer l'image",
+  "edit_picture_trad": "MODIFIER LA PHOTO DE PROFIL",
+  "Edit_pass_trad": "MODIFIER LE MOT DE PASSE",
+  "add_friend_trad": "Ajouter un ami",
+  "block_friend_trad": "Bloquer le joueur",
+  "tournament_played": "TOURNOIS JOUÉS",
+  "best_rank": "MEILLEUR CLASSEMENT",
+  "tournament_l": "Défaites en tournoi",
+  "tournament_w": "Victoires en tournoi"
 }
