nornalmente la traduction fonctionnar

--- a/frontend/public/locales/es.json
+++ b/frontend/public/locales/es.json
@@ -71,7 +71,7 @@
   "enter_your_alias_placeholder": "Introduce tu alias...",
   "cancel_button": "Cancelar",
   "confirm_join_button": "Unirse",
-  "home": "recepción",
+  "home": "Inicio",
   "Stats": "Estadísticas",
   "new_password": "Nueva contraseña",
   "current_pass": " Contraseña actual",
