problem fixed in history

--- a/frontend/public/locales/es.json
+++ b/frontend/public/locales/es.json
@@ -18,7 +18,7 @@
   "signin_button": "Iniciar sesión",
   "signup_link": "Registrarse",
 
-  "a2f_title": "Autenticación de dos factores",
+  "a2f_title": "Autentificación de dos factores",
   "code_label": "Código",
   "code_placeholder": "introduce el código aquí",
   "send_code_button": "¡Envíame el código!",
