--- a/frontend/public/locales/es.json
+++ b/frontend/public/locales/es.json
@@ -115,5 +115,23 @@
   "your_turn": "Es tu turno de jugar en el torneo",
   "games_stats": "Estadísticas de partidos",
   "tournaments_stats": "Estadísticas de torneos",
-  "points_stats": "Estadísticas de puntos"
+  "points_stats": "Estadísticas de puntos",
+    "Error_verif_user": "Se ha producido un error al verificar el usuario. Por favor, inténtelo de nuevo más tarde.",
+  "not_friend": "No eres amigo de este usuario.",
+  "already_send": "Has enviado una solicitud de amistad a este usuario. Por favor espera su respuesta.",
+  "local_can't_start": "Error : el juego local no puede iniciarse.",
+  "not_in_game": "No estás en un juego",
+  "err_co": "Error de conexión al juego",
+  "failed_id": "Error al cargar las identificaciones de los reproductores",
+  "pass_match": "La contraseña no coincide.",
+  "picture_no": "Seleccione una imagen",
+  "alias_too_long": "Alias muy largo !",
+  "torn_faield": "No se pudo crear el torneo",
+  "torn_name": "Por favor, introduzca el nombre del torneo",
+  "torn_pass": "Introduzca una contraseña para el torneo privado",
+  "user_NOT_FOUND": "No se encontró el usuario !",
+  "error_user": "Se ha producido un error al verificar el usuario.",
+  "no_pass": "Contraseña incorrecta",
+  "same_pass": "No cambie su pase con el último",
+  "not_the_current": "Su contraseña actual no es la contraseña actual"
 }
