--- a/frontend/public/locales/fr.json
+++ b/frontend/public/locales/fr.json
@@ -115,5 +115,23 @@
   "your_turn": "C'est a votre tour de jouer dans le tournoi",
   "games_stats": "Statistiques de Parties",
   "tournaments_stats": "Statistiques de tournois",
-  "points_stats": "Statistiques de points"
+  "points_stats": "Statistiques de points",
+   "Error_verif_user" : "Une erreur s’est produite lors de la vérification de l’utilisateur. Veuillez réessayer plus tard.",
+  "not_friend" : "Vous n’êtes pas ami avec cet utilisateur." ,
+  "already_send" : "Vous avez envoyé une demande d’ami à cet utilisateur. Veuillez attendre sa réponse." ,
+  "local_can’t_start" : "Error : Local game cannot start." ,
+  "not_in_game" : "Tu n’es pas dans un jeu",
+  "err_co" : "Erreur de connexion au jeu",
+  "failed_id" : "Échec du chargement des identifiants du joueur",
+  "pass_match" : "Le mot de passe ne correspond pas.",
+  "picture_no" : "Veuillez sélectionner une image",
+  "alias_too_long" : "Alias trop long !" ,
+  "torn_faield" : "Échec de la création du tournoi",
+  "torn_name" : "Veuillez entrer un nom de tournoi",
+  "torn_pass" : "Veuillez entrer un mot de passe pour le tournoi privé",
+  "user_NOT_FOUND" : "User not found!" ,
+  "error_user" : "Une erreur s’est produite lors de la vérification de l’utilisateur." ,
+  "no_pass" : "Mot de passe incorrect",
+  "same_pass" : "Ne change pas ton passwor avec le dernier",
+  "not_the_current" : "Votre mot de passe actuel n’est pas le mot de passe actuel"
 }
