--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -100,7 +100,7 @@
   "a2f_good_mess": "2FA code verified, redirecting to home page...",
   "a2f_send": "2FA code sent, please enter it",
   "Error_co": "Please Sign in or Sign up !",
-  "login_sucess": "Login successfull! Redirecting to 2FA page...",
+  "login_success": "Login successfull! Redirecting to 2FA page...",
   "register_success": "Registration successful! redirecting to login page...",
   "edit_sucess": "Your profile has been updated successfully",
   "password_edit_sucess": "Password edit success",
