--- a/frontend/public/locales/fr.json
+++ b/frontend/public/locales/fr.json
@@ -133,5 +133,6 @@
   "error_user" : "Une erreur s’est produite lors de la vérification de l’utilisateur." ,
   "no_pass" : "Mot de passe incorrect",
   "same_pass" : "Ne change pas ton passwor avec le dernier",
-  "not_the_current" : "Votre mot de passe actuel n’est pas le mot de passe actuel"
+  "not_the_current" : "Votre mot de passe actuel n’est pas le mot de passe actuel",
+  "controls": "Commandes"
 }
