--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -133,5 +133,6 @@
 	"error_user": "An error occurred while verifying the user.",
 	"no_pass": "Wrong password ",
 	"same_pass": "Don't change your password with the last",
-	"not_the_current": "Your current password is not the current password"
+	"not_the_current": "Your current password is not the current password",
+  "controls": "Controls"
 }
