--- a/frontend/public/locales/es.json
+++ b/frontend/public/locales/es.json
@@ -133,5 +133,6 @@
 	"error_user": "Se ha producido un error al verificar el usuario.",
 	"no_pass": "Contraseña incorrecta",
 	"same_pass": "No cambie su pase con el último",
-	"not_the_current": "Su contraseña actual no es la contraseña actual"
+	"not_the_current": "Su contraseña actual no es la contraseña actual",
+  "controls": "Pedidos"
 }
