--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -102,7 +102,7 @@
 	"Error_co": "Please Sign in or Sign up !",
 	"login_success": "Login successfull! Redirecting to 2FA page...",
 	"register_success": "Registration successful! redirecting to login page...",
-	"edit_sucess": "Your profile has been updated successfully",
+	"edit_success": "Your profile has been updated successfully",
 	"password_edit_sucess": "Password edit success",
 	"total_games_trad": "Total Games",
 	"Victories_trad": "Victories",
