--- a/frontend/public/locales/fr.json
+++ b/frontend/public/locales/fr.json
@@ -134,5 +134,7 @@
 	"no_pass" : "Mot de passe incorrect",
 	"same_pass" : "Ne change pas ton mot de passe avec le dernier",
 	"not_the_current" : "Votre mot de passe actuel incorrect",
-  "controls": "Commmandes"
+  	"controls": "Commmandes",
+	"incomplete_data": "Veuillez remplir les au moins l'un des deux champs !",
+  	"user_error": "Ce pseudonyme est deja utilisé"
 }
