--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -136,5 +136,5 @@
 	"not_the_current": "Your current password is not the current password",
   "controls": "Controls",
 	"incomplete_data": "Please fill in at least one of the two fields!" ,
-  "user_error": "This pseudonym is already used"
+  "user_error": "Un usuario ya tiene esta información"
 }
