--- a/frontend/public/locales/es.json
+++ b/frontend/public/locales/es.json
@@ -136,5 +136,10 @@
 	"not_the_current": "Su contraseña actual no es la contraseña actual",
 	"controls": "Pedidos",
 	"incomplete_data": "¡Rellene al menos uno de los dos campos!",
-	"user_error": "Este seudónimo ya se utiliza"
+	"user_error": "Un usuario ya tiene esta información",
+	"bad_picture": "Seleccione una imagen válida (PNG, JPG, WEBP, ...)",
+	"bad_code": "código incorrecto",
+	"invalid_info": "nombre de usuario o correo electrónico no válidos, este usuario ya existe",
+	"bad_mail_pass": "correo electrónico o contraseña inválidos",
+	"bad_user_pass": "nombre de usuario o contraseña inválidos"
 }
