traduction ok dans le jeu

--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -9,7 +9,7 @@
 	"signup_button": "Sign Up",
 	"already_have_account": "Already have an account ?",
 
- "signin_title": "Sign In to ft_transcendence",
+	"signin_title": "Sign In to ft_transcendence",
 	"username_label": "Username",
 	"or_email_link": "or Email",
 	"email_label": "Email",
@@ -101,7 +101,7 @@
 	"a2f_send": "2FA code sent, please enter it",
 	"Error_co": "Please Sign in or Sign up !",
 	"login_success": "Login successfull! Redirecting to 2FA page...",
-	"register_success": "Registration successful! redirecting to login page...",
+	"register_success": "Registration successful! Redirecting to login page...",
 	"edit_success": "Your profile has been updated successfully",
 	"password_edit_sucess": "Password edit success",
 	"total_games_trad": "Total Games",
@@ -135,6 +135,10 @@
 	"same_pass": "Don't change your password with the last",
 	"not_the_current": "Your current password is not the current password",
   	"controls": "Controls",
+	"waiting": "Waiting for new player...",
+	"to_start": "Press space",
+	"1_win": "Player 1 win !",
+	"2_win": "Player 2 win !",
 	"incomplete_data": "Please fill in at least one of the two fields!" ,
   	"user_error": "A user already has this information",
 	"bad_picture": "Please select a valid image (PNG, JPG, WEBP, ...)",
