--- a/frontend/public/locales/fr.json
+++ b/frontend/public/locales/fr.json
@@ -101,7 +101,7 @@
 	"a2f_send": "Code A2F envoyé, veuillez le rentrer",
 	"Error_co": "Pouvez-vous vous connectez ou créer un compte",
 	"login_success": "Connexion réussie, redirection vers la page de l’a2f",
-	"register_success": "Création de compte réussie ! redirection vers la page de connexion...",
+	"register_success": "Création de compte réussie ! Redirection vers la page de connexion...",
 	"edit_success": "Votre profil a été mis à jour avec succès",
 	"password_edit_success": "Mot de passe modifié avec succès",
 	"total_games_trad": "Total des matchs",
@@ -135,6 +135,10 @@
 	"same_pass" : "Ne change pas ton mot de passe avec le dernier",
 	"not_the_current" : "Votre mot de passe actuel incorrect",
   	"controls": "Commmandes",
+	"waiting": "En attente de joueur...",
+	"to_start": "Appuyez sur espace",
+	"1_win": "Le joueur 1 a gagné !",
+	"2_win": "Le joueur 2 a gagné !",
 	"incomplete_data": "Veuillez remplir les au moins l'un des deux champs !",
   	"user_error": "Un utilisateur possede deja ces informations",
 	"bad_picture" : "Veuillez sélectionner une image valide (PNG, JPG, WEBP, ...)",
