--- a/frontend/public/locales/es.json
+++ b/frontend/public/locales/es.json
@@ -101,7 +101,7 @@
 	"a2f_send": "Código 2FA enviado, por favor introdúzcalo",
 	"Error_co": "Inicie sesión o salga de la cuenta",
 	"login_success": "Conexión correcta, redireccionamiento a la página del a2f",
-	"register_success": "Creación de cuenta! redirigir a la página de conexión...",
+	"register_success": "¡Creación de cuenta! Redirigir a la página de conexión...",
 	"edit_success": "Su perfil ha sido actualizado con éxito",
 	"password_edit_success": "Contraseña modificada con éxito",
 	"total_games_trad": "Total de partidos",
@@ -125,7 +125,7 @@
 	"failed_id": "Error al cargar las identificaciones de los reproductores",
 	"pass_match": "La contraseña no coincide.",
 	"picture_no": "Seleccione una imagen",
-	"alias_too_long": "Alias muy largo !",
+	"alias_too_long": "¡ Alias muy largo !",
 	"torn_faield": "No se pudo crear el torneo",
 	"torn_name": "Por favor, introduzca el nombre del torneo",
 	"torn_pass": "Introduzca una contraseña para el torneo privado",
@@ -135,6 +135,10 @@
 	"same_pass": "No cambie su pase con el último",
 	"not_the_current": "Su contraseña actual no es la contraseña actual",
 	"controls": "Pedidos",
+	"waiting": "Esperando a un nuevo jugador...",
+	"to_start": "Espacio de prensa",
+	"1_win": "¡El jugador 1 gana!",
+	"2_win": "¡El jugador 2 gana!",
 	"incomplete_data": "¡Rellene al menos uno de los dos campos!",
 	"user_error": "Un usuario ya tiene esta información",
 	"bad_picture": "Seleccione una imagen válida (PNG, JPG, WEBP, ...)",
