--- a/frontend/public/locales/es.json
+++ b/frontend/public/locales/es.json
@@ -145,5 +145,8 @@
 	"bad_code": "código incorrecto",
 	"invalid_info": "nombre de usuario o correo electrónico no válidos, este usuario ya existe",
 	"bad_mail_pass": "correo electrónico o contraseña inválidos",
-	"bad_user_pass": "nombre de usuario o contraseña inválidos"
+	"bad_user_pass": "nombre de usuario o contraseña inválidos",
+	"points_trad": "Puntos",
+	"win_trad": "Victorias",
+	"lose_trad": "Derrotas"
 }
