--- a/frontend/public/locales/es.json
+++ b/frontend/public/locales/es.json
@@ -139,6 +139,7 @@
 	"to_start": "Espacio de prensa",
 	"1_win": "¡El jugador 1 gana!",
 	"2_win": "¡El jugador 2 gana!",
+	"ai_win": "¡La IA gana!",
 	"incomplete_data": "¡Rellene al menos uno de los dos campos!",
 	"user_error": "Un usuario ya tiene esta información",
 	"bad_picture": "Seleccione una imagen válida (PNG, JPG, WEBP, ...)",
