--- a/frontend/public/locales/fr.json
+++ b/frontend/public/locales/fr.json
@@ -139,6 +139,7 @@
 	"to_start": "Appuyez sur espace",
 	"1_win": "Le joueur 1 a gagné !",
 	"2_win": "Le joueur 2 a gagné !",
+	"ai_win": "L'IA a gagné !",
 	"incomplete_data": "Veuillez remplir les au moins l'un des deux champs !",
   	"user_error": "Un utilisateur possede deja ces informations",
 	"bad_picture" : "Veuillez sélectionner une image valide (PNG, JPG, WEBP, ...)",
