--- a/frontend/public/locales/es.json
+++ b/frontend/public/locales/es.json
@@ -149,5 +149,9 @@
 	"bad_user_pass": "nombre de usuario o contraseña inválidos",
 	"points_trad": "Puntos",
 	"win_trad": "Victorias",
-	"lose_trad": "Derrotas"
+	"lose_trad": "Derrotas",
+	"quarter-finalist": "Quater-finalista",
+	"semifinalista": "Semi-Finalista",
+	"finalista": "Finalista",
+	"winner": "El ganador"
 }
