--- a/frontend/public/locales/fr.json
+++ b/frontend/public/locales/fr.json
@@ -149,5 +149,9 @@
 	"bad_user_pass" : "Nom d’utilisateur ou mot de passe invalide",
 	"points_trad" : "Points",
 	"win_trad" : "Victoires",
-	"lose_trad" : "Défaites"
+	"lose_trad" : "Défaites",
+	"quarter-finalist": "Quarts-de-finalistes",
+	"semi-finalist": "Demi-finalistes",
+	"finalist": "Finalistes",
+	"winner": "Vainqueur"
 }
