--- a/frontend/public/locales/fr.json
+++ b/frontend/public/locales/fr.json
@@ -147,7 +147,7 @@
 	"invalid_info" : "invalid username or email, Cet utilisateur existe déjà",
 	"bad_mail_pass" : "Email ou mot de passe invalide",
 	"bad_user_pass" : "Nom d’utilisateur ou mot de passe invalide",
-	"points_trad" : "Points",
+	"point_trad" : "Points",
 	"win_trad" : "Victoires",
 	"lose_trad" : "Défaites",
 	"quarter-finalist": "Quarts-de-finalistes",
@@ -159,5 +159,6 @@
 	"Request_Sent" : "Demande envoyée",
 	"Request_Received" : "Demande Reçue",
 	"Remove_Friend" : "Supprimer un ami",
-	"Unblock_Player" : "Débloquer ce joueur"
+	"Unblock_Player" : "Débloquer ce joueur",
+	"touch_html": "Pouvez-vous respecter la politique imposée s'il vous plait"
 }
