--- a/frontend/public/locales/es.json
+++ b/frontend/public/locales/es.json
@@ -160,5 +160,6 @@
 	"Request_Received" : "Solicitud recibida",
 	"Remove_Friend": "Eliminar un amigo",
 	"Unblock_Player": "Desbloquear este jugador",
-	"touch_html": "¿Puede cumplir con la política impuesta, por favor?"
+	"touch_html": "¿Puede cumplir con la política impuesta, por favor?",
+	"tournament_full": "El torneo es completo"
 }
