--- a/frontend/public/locales/fr.json
+++ b/frontend/public/locales/fr.json
@@ -160,5 +160,6 @@
 	"Request_Received" : "Demande Reçue",
 	"Remove_Friend" : "Supprimer un ami",
 	"Unblock_Player" : "Débloquer ce joueur",
-	"touch_html": "Pouvez-vous respecter la politique imposée s'il vous plait"
+	"touch_html": "Pouvez-vous respecter la politique imposée s'il vous plait",
+	"tournament_full": "Le tournoi est complet"
 }
