trad normalement partout

--- a/frontend/public/locales/es.json
+++ b/frontend/public/locales/es.json
@@ -161,5 +161,6 @@
 	"Remove_Friend": "Eliminar un amigo",
 	"Unblock_Player": "Desbloquear este jugador",
 	"touch_html": "¿Puede cumplir con la política impuesta, por favor?",
-	"tournament_full": "El torneo es completo"
+	"tournament_full": "El torneo es completo",
+	"return_home": "Volver al inicio"
 }
