--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -161,5 +161,6 @@
 	"Remove_Friend": "Remove Friend",
 	"Unblock_Player": "Unblock Player",
 	"touch_html": "Please, Can you respect the imposed policy",
-	"tournament_full": "The tournament is full"
+	"tournament_full": "The tournament is full",
+	"return_home": "Return home"
 }
