--- a/frontend/public/locales/fr.json
+++ b/frontend/public/locales/fr.json
@@ -162,5 +162,7 @@
 	"Unblock_Player" : "Débloquer ce joueur",
 	"touch_html": "Pouvez-vous respecter la politique imposée s'il vous plait",
 	"tournament_full": "Le tournoi est complet",
-	"return_home": "Retour au menu"
+	"return_home": "Retour au menu",
+	"Error_trad" : "⚡ ERREUR ⚡",
+	"Success_trad" : "✅ SUCCÈS ✅"
 }
