ca marche pas donc on magouille et ca marche

--- a/frontend/public/locales/es.json
+++ b/frontend/public/locales/es.json
@@ -162,7 +162,5 @@
 	"Unblock_Player": "Desbloquear este jugador",
 	"touch_html": "¿Puede cumplir con la política impuesta, por favor?",
 	"tournament_full": "El torneo es completo",
-	"return_home": "Volver al inicio",
-	"Error_trad": "⚡ ERROR ⚡",
-	"Success_trad": "✅ ÉXITO ✅"
+	"return_home": "Volver al inicio"
 }
