--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -162,7 +162,5 @@
 	"Unblock_Player": "Unblock Player",
 	"touch_html": "Please, Can you respect the imposed policy",
 	"tournament_full": "The tournament is full",
-	"return_home": "Return home",
-	"Error_trad": "⚡ ERROR ⚡",
-	"Success_trad": "✅ SUCCESS ✅"
+	"return_home": "Return home"
 }
