--- a/frontend/public/locales/es.json
+++ b/frontend/public/locales/es.json
@@ -89,7 +89,7 @@
 	"add_friend_trad": "Agregar amigo",
 	"block_friend_trad": "Bloquear jugador",
 	"tournament_played": "Torneos jugados",
-	"best_rank": "Ultima clasificación",
+	"best_rank": "Última clasificación",
 	"tournament_l": "Derrotas en torneos",
 	"tournament_w": "Victorias en torneos",
 	"GAME_P": "Partidas jugadas",
