--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -164,5 +164,6 @@
 	"Unblock_Player": "Unblock Player",
 	"touch_html": "Please, Can you respect the imposed policy",
 	"tournament_full": "The tournament is full",
-	"return_home": "Return home"
+	"return_home": "Return home",
+	"tour_error_trad": "Please wait until it’s your turn to play (a message will be sent to you in the global chat)"
 }
