cyprien le fera dans l'ia

--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -139,8 +139,8 @@
   	"controls": "Controls",
 	"waiting": "Waiting for new player...",
 	"to_start": "Press space",
-	"1_win": "Player 1 win !",
-	"2_win": "Player 2 win !",
+	"1_win": "win !",
+	"2_win": "win !",
 	"ai_win": "AI win !",
 	"incomplete_data": "Please fill in at least one of the two fields!" ,
   	"user_error": "A user already has this information",
