--- a/frontend/public/locales/es.json
+++ b/frontend/public/locales/es.json
@@ -139,8 +139,8 @@
 	"controls": "Pedidos",
 	"waiting": "Esperando a un nuevo jugador...",
 	"to_start": "Espacio de prensa",
-	"1_win": "¡El jugador 1 gana!",
-	"2_win": "¡El jugador 2 gana!",
+	"1_win": "gana",
+	"2_win": "gana",
 	"ai_win": "¡La IA gana!",
 	"incomplete_data": "¡Rellene al menos uno de los dos campos!",
 	"user_error": "Un usuario ya tiene esta información",
