stats tournoi bon

--- a/frontend/public/locales/es.json
+++ b/frontend/public/locales/es.json
@@ -152,8 +152,8 @@
 	"point_trad": "Puntos",
 	"win_trad": "Victorias",
 	"lose_trad": "Derrotas",
-	"quarter-finalist": "Quater-finalista",
-	"semifinalista": "Semi-Finalista",
+	"quarter-finalist": "Cuartos de finalistas",
+	"semifinalista": "Semifinalista",
 	"finalista": "Finalista",
 	"winner": "El ganador",
 	"player_1_trad": "Jugador 1",
