now there is no problem with the winner of local mod

--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -139,9 +139,11 @@
   	"controls": "Controls",
 	"waiting": "Waiting for new player...",
 	"to_start": "Press space",
-	"1_win": "win !",
-	"2_win": "win !",
-	"ai_win": "AI win !",
+	"1_win": "has won !",
+	"2_win": "has won !",
+	"1_lwin": "Player1 has won !",
+	"2_lwin": "Player2 has won !",
+	"ai_win": "AI has won !",
 	"incomplete_data": "Please fill in at least one of the two fields!" ,
   	"user_error": "A user already has this information",
 	"bad_picture": "Please select a valid image (PNG, JPG, WEBP, ...)",
