--- a/frontend/public/locales/fr.json
+++ b/frontend/public/locales/fr.json
@@ -135,13 +135,11 @@
 	"no_pass" : "Mot de passe incorrect",
 	"same_pass" : "Ne change pas ton mot de passe avec le dernier",
 	"not_the_current" : "Votre mot de passe actuel incorrect",
-  	"controls": "Commandes",
+  	"controls": "Commmandes",
 	"waiting": "En attente de joueur...",
 	"to_start": "Appuyez sur espace",
-	"1_win": "a gagné !",
-	"2_win": "a gagné !",
-	"1_lwin": "Joueur1 a gagné !",
-	"2_lwin": "Joueur2 a gagné !",
+	"1_win": "a gagné",
+	"2_win": "a gagné",
 	"ai_win": "L'IA a gagné !",
 	"incomplete_data": "Veuillez remplir les au moins l'un des deux champs !",
   	"user_error": "Un utilisateur possede deja ces informations",
