--- a/frontend/public/locales/es.json
+++ b/frontend/public/locales/es.json
@@ -165,5 +165,8 @@
 	"touch_html": "¿Puede cumplir con la política impuesta, por favor?",
 	"tournament_full": "El torneo es completo",
 	"return_home": "Volver al inicio",
-	"tour_error_trad": "Por favor espere a que sea su turno de jugar (se le enviará un mensaje en el chat global)"
+	"tour_error_trad": "Por favor espere a que sea su turno de jugar (se le enviará un mensaje en el chat global)",
+	"tournament_announce1": "El juego contra",
+	"tournament_announce2": "comenzará",
+	"and":"y"
 }
