now in local if player1 or player2 win the message is like it has to be

--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -136,14 +136,16 @@
 	"no_pass": "Wrong password ",
 	"same_pass": "Don't change your password with the last",
 	"not_the_current": "Your current password is not the current password",
-	"controls": "Controls",
+  	"controls": "Controls",
 	"waiting": "Waiting for new player...",
 	"to_start": "Press space",
-	"1_win": "win !",
-	"2_win": "win !",
-	"ai_win": "AI win !",
+	"1_win": "has won !",
+	"2_win": "has won !",
+	"1_lwin": "Player1 has won !",
+	"2_lwin": "Player2 has won !",
+	"ai_win": "AI has won !",
 	"incomplete_data": "Please fill in at least one of the two fields!" ,
-	"user_error": "A user already has this information",
+  	"user_error": "A user already has this information",
 	"bad_picture": "Please select a valid image (PNG, JPG, WEBP, ...)",
 	"bad_code": "Wrong code",
 	"invalid_info": "invalid username or email, This user already exists",
