--- a/frontend/public/locales/es.json
+++ b/frontend/public/locales/es.json
@@ -139,9 +139,11 @@
 	"controls": "Pedidos",
 	"waiting": "Esperando a un nuevo jugador...",
 	"to_start": "Espacio de prensa",
-	"1_win": "gana",
-	"2_win": "gana",
-	"ai_win": "¡La IA gana!",
+	"1_win": "ha ganado !",
+	"2_win": "ha ganado !",
+	"1_lwin": "Jugador1 ha ganado !",
+	"2_lwin": "Jugador2 ha ganado !",
+	"ai_win": "¡La IA ha ganado !",
 	"incomplete_data": "¡Rellene al menos uno de los dos campos!",
 	"user_error": "Un usuario ya tiene esta información",
 	"bad_picture": "Seleccione una imagen válida (PNG, JPG, WEBP, ...)",
@@ -152,8 +154,8 @@
 	"point_trad": "Puntos",
 	"win_trad": "Victorias",
 	"lose_trad": "Derrotas",
-	"quarter-finalist": "Cuartos de finalistas",
-	"semifinalista": "Semifinalista",
+	"quarter-finalist": "Quater-finalista",
+	"semifinalista": "Semi-Finalista",
 	"finalista": "Finalista",
 	"winner": "El ganador",
 	"player_1_trad": "Jugador 1",
