--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -170,5 +170,6 @@
 	"tour_error_trad": "Please wait until it’s your turn to play (a message will be sent to you in the global chat)",
 	"tournament_announce1": "the game against",
 	"tournament_announce2": "will begin",
-	"and":"and"
+	"and": "and",
+	"has_won_the_tournament": "has won the tournament !"
 }
