--- a/frontend/public/locales/fr.json
+++ b/frontend/public/locales/fr.json
@@ -169,5 +169,6 @@
 	"tour_error_trad": "Veuillez attendre que ce soit a votre tour de jouer (un message vous sera envoyé dans le tchat global)",
 	"tournament_announce1": "La partie contre",
 	"tournament_announce2": "va commencer",
-	"and":"et"
+	"and": "et",
+	"has_won_the_tournament": "a gagné le derbier tournoi !"
 }
